Fix mobile alignment bugs

--- a/css/style/responsive/front/front.css
+++ b/css/style/responsive/front/front.css
@@ -13,4 +13,7 @@
         padding-left: 0px;
         padding-right: 0px;
     }
+    .header_title br {
+        display: none;
+    }
 }
